tests/sumo/extended/simulation_routing/personTrip/errors/testsuite.sumo
# two rides without pt but with route output
unreachable_rides

# public transport via bustops
flow_without_end
